DBC22-3274: Fixed advisories list styling on mobile

--- a/src/frontend/src/pages/AdvisoriesListPage.scss
+++ b/src/frontend/src/pages/AdvisoriesListPage.scss
@@ -35,11 +35,10 @@
       }
 
       &__content {
-        display: flex;
-        justify-content: space-between;
 
         @media (min-width: 992px) {
           display: flex;
+          justify-content: space-between;
           width: 100%;
           gap: 40px;
 
